--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,112 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
 
 :root {
-    --dark-gray: hsl(0, 0%, 59%);
-    --very-dark-gray: hsl(0, 0%, 17%)
+  --dark-gray: hsl(0, 0%, 59%);
+  --very-dark-gray: hsl(0, 0%, 17%);
 }
 
 body {
-    font-family: 'Rubik', sans-serif;
-    font-size: 18px;
+  font-family: "Rubik", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  background: url("./images/pattern-bg.png") no-repeat center;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding-top: 20px;
+  height: 247px;
+}
+
+header > h1 {
+  margin: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 29px;
+}
+
+header > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header > div > input {
+  font-family: "Rubik", sans-serif;
+  padding: 18px 0px 18px 21px;
+  font-size: 17px;
+  border-radius: 16px 0 0 16px;
+  border: none;
+  width: 550px;
+}
+
+#search-btn {
+  background-color: black;
+  margin: 0px 0px 0px -8px;
+  padding: 21px;
+  display: inline-block;
+  border-radius: 0 16px 16px 0;
+  cursor: pointer;
+}
+#search-btn:hover {
+    background-color: var(--very-dark-gray);
+}
+
+input:focus{
+    outline: none !important;
+}
+
+#ip-output-info {
+    display: flex;
+    margin: -64px 13% 0px 13%;
+    justify-content: space-around;
+    background-color: white;
+    border-radius: 14px;
+}
+#ip-output-info > div{
+    border-right: 1px solid var(--dark-gray);
+    margin: 17px 0px;
+    width: 22%;
+}
+
+#ip-output-info > div > h2 {
+    color: var(--dark-gray);
     font-weight: 400;
+    font-size: 16px;
+    margin: 0;
+    text-transform: uppercase;
+}
+#ip-output-info > div > p {
+    font-weight: 500;
+    font-size: 23px;
+    margin-top: 5px;
+}
+
+#isp {
+    border: none !important;
+}
+
+#map-section{
+    margin-top: -100px;
+    margin-bottom: 20px;
+}
+
+.leaflet-control-container {
+    display: none;
+}
+
+#map {
+    height: calc(100vh);
+    z-index: -1;
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
